# i-cant-read

i-cant-read-obs-plugin/: .gitignore  CMakeLists.txt  buildspec.json  howto.md
i-cant-read-obs-plugin/data/shaders/: diff.comp  gray_lap.comp
i-cant-read-obs-plugin/include/glad/: gl.h
i-cant-read-obs-plugin/src/: gate-manager.c  gates.c  gates.h  settings-dialog.cpp  settings-dialog.hpp  settings.c  stb_image_write.h
middleman_cant_read/: .gitignore  config.py
middleman_cant_read/management/: dispatcher.py  healthcheck.py  i_cant_read.py
middleman_cant_read/services/listeners/: obs_plugin_listener.py
middleman_cant_read/tasks/: __init__.py  cleanup_task.py  dispatch_replicas_task.py  ocr_dedup_task.py  playback_task.py  textfilter_task.py
middleman_cant_read/tasks/ocr_tasks/: __init__.py  ollama_ocr_frame_task.py  owocr_ocr_frame_task.py
middleman_cant_read/tasks/rvc_tasks/: __init__.py  applio_rvc_task.py  rvc_gradio_task.py
middleman_cant_read/tasks/tts_tasks/: __init__.py  kokoro_fastapi_task.py  kokoro_gradio_task.py
middleman_cant_read/tasks/utils/: __init__.py  ocr_dedup.py  textfilter.py
obs/: .gitignore
obs/i-cant-read-obs-plugin/: CMakeLists.txt  CMakeUserPresets.json  copy_build_to_config.sh
obs/i-cant-read-obs-plugin/build-aux/: .run-format.zsh
obs/i-cant-read-obs-plugin/cmake/common/: embed_spirv.cmake
obs/i-cant-read-obs-plugin/data/shaders/: dilate.comp  reduce.comp
obs/i-cant-read-obs-plugin/src/: dhash.c  dhash.h  gate-manager.c  gate-manager.h  gates.c  gates.h  gl.c  plugin-main.c  settings-dialog.cpp  settings.c  settings.h
